force-app/main/default/objects/Torc_History__c/Torc_History__c.object-meta.xml
<CustomObject>
    <label>Torc History</label>
    <nameField>
        <label>Torc History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torc Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>