force-app/main/default/objects/Torc_History__c/fields/attribute__c.field-meta.xml
<CustomField>
    <fullName>attribute__c</fullName>
    <label>Attribute</label>
    <length>60</length>
    <type>Text</type>
</CustomField>