force-app/main/default/objects/Torc_History__c/fields/Created_by_Torc_user__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Torc_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Histories</relationshipLabel>
    <relationshipName>Torc_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>