force-app/main/default/objects/Torc_History__c/fields/creator__c.field-meta.xml
<CustomField>
    <fullName>creator__c</fullName>
    <label>Creator</label>
    <length>150</length>
    <type>Text</type>
</CustomField>