force-app/main/default/objects/Torc_History__c/fields/eventType__c.field-meta.xml
<CustomField>
    <fullName>eventType__c</fullName>
    <label>Event Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>