force-app/main/default/objects/Torc_History__c/fields/oldValue__c.field-meta.xml
<CustomField>
    <fullName>oldValue__c</fullName>
    <label>Old Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>