force-app/main/default/objects/Torc_History__c/fields/primaryKey__c.field-meta.xml
<CustomField>
    <fullName>primaryKey__c</fullName>
    <label>Primary Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>