force-app/main/default/objects/Torc_History__c/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <length>150</length>
    <type>Text</type>
</CustomField>